# fast_io_func

./: CMakeLists.txt
fast_io_func/: CMakeLists.txt  fast_io_func.cpp  fast_io_func.h
