# CMakeList.txt: проект CMake для fast_io_func; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (fast_io_func "fast_io_func.cpp" "fast_io_func.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
